Added dependencies using add_dependencies to be able to make inside each module dir

--- a/axiom-evi-apps/axiom-netperf/CMakeLists.txt
+++ b/axiom-evi-apps/axiom-netperf/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_executable(axiom-netperf axiom-netperf.c)
+add_dependencies(axiom-netperf axiom_user_library)
 target_link_libraries(axiom-netperf axiom_user_library)
 
