--- a/axiom-evi-apps/axiom-whoami/CMakeLists.txt
+++ b/axiom-evi-apps/axiom-whoami/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_executable(axiom-whoami axiom-whoami.c)
+add_dependencies(axiom-whoami axiom_user_library)
 target_link_libraries(axiom-whoami axiom_user_library)
 
