--- a/axiom-evi-apps/axiom-info/CMakeLists.txt
+++ b/axiom-evi-apps/axiom-info/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_executable(axiom-info axiom-info.c)
+add_dependencies(axiom-info axiom_user_library)
 target_link_libraries(axiom-info axiom_user_library)
