--- a/axiom-evi-apps/axiom-send/CMakeLists.txt
+++ b/axiom-evi-apps/axiom-send/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_executable(axiom-send axiom-send.c)
+add_dependencies(axiom-send axiom_user_library)
 target_link_libraries(axiom-send axiom_user_library)
 
