FIX : forgot to remove LINK_PUBLIC from some CMakeLists

--- a/axiom-evi-allocator-lib/test/CMakeLists.txt
+++ b/axiom-evi-allocator-lib/test/CMakeLists.txt
@@ -3,9 +3,9 @@ add_executable (testB testB.c)
 add_executable (testFreelist testFreelist.c)
 #add_executable (aarch64_allocator_test aarch64_allocator_test.c)
 
-add_dependencies(testA LINK_PUBLIC axiom-allocator-library)
-add_dependencies(testB LINK_PUBLIC axiom-allocator-library)
-add_dependencies(testFreelist LINK_PUBLIC axiom-allocator-library)
+add_dependencies(testA axiom-allocator-library)
+add_dependencies(testB axiom-allocator-library)
+add_dependencies(testFreelist axiom-allocator-library)
 target_link_libraries (testA LINK_PUBLIC axiom-allocator-library)
 target_link_libraries (testB LINK_PUBLIC axiom-allocator-library)
 target_link_libraries (testFreelist LINK_PUBLIC axiom-allocator-library)
