--- a/axiom-evi-apps/axiom-init/lib/CMakeLists.txt
+++ b/axiom-evi-apps/axiom-init/lib/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library (libaxiom_init_api SHARED execvpe.c)
-target_include_directories (libaxiom_init_api PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+add_library (axiom_init_api SHARED execvpe.c)
+target_include_directories (axiom_init_api PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
