--- a/axiom-evi-apps/axiom_common_library/CMakeLists.txt
+++ b/axiom-evi-apps/axiom_common_library/CMakeLists.txt
@@ -1,4 +1,4 @@
 
-add_library (libaxiom_common daemonize daemonize.c logmsg.c strlcat.c strlcpy.c strlist.c)
+add_library (axiom_common daemonize daemonize.c logmsg.c strlcat.c strlcpy.c strlist.c)
 #target_link_libraries (libaxiom_common LINK_PUBLIC axiom-evi-apps)
 
