--- a/axiom-evi-apps/axiom-run/lib/CMakeLists.txt
+++ b/axiom-evi-apps/axiom-run/lib/CMakeLists.txt
@@ -1,3 +1,2 @@
-add_library (libaxiom_run_api SHARED nodes.c  rpc.c  sync.c)
-
-target_include_directories (libaxiom_run_api PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+add_library (axiom_run_api SHARED nodes.c  rpc.c  sync.c)
+target_include_directories (axiom_run_api PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
