--- a/axiom-evi-apps/axiom-run/lib/CMakeLists.txt
+++ b/axiom-evi-apps/axiom-run/lib/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_library (axiom_run_api SHARED nodes.c  rpc.c  sync.c)
 target_include_directories (axiom_run_api PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+install(TARGETS axiom_run_api
+        LIBRARY DESTINATION /usr/bin)
