--- a/axiom-evi-apps/axiom-whoami/CMakeLists.txt
+++ b/axiom-evi-apps/axiom-whoami/CMakeLists.txt
@@ -2,3 +2,5 @@ add_executable(axiom-whoami axiom-whoami.c)
 add_dependencies(axiom-whoami axiom_user_library)
 target_link_libraries(axiom-whoami axiom_user_library)
 
+install(TARGETS axiom-whoami
+        RUNTIME DESTINATION /usr/bin)
