--- a/axiom-evi-apps/axiom_common_library/CMakeLists.txt
+++ b/axiom-evi-apps/axiom_common_library/CMakeLists.txt
@@ -2,3 +2,5 @@
 add_library (axiom_common daemonize daemonize.c logmsg.c strlcat.c strlcpy.c strlist.c)
 #target_link_libraries (libaxiom_common LINK_PUBLIC axiom-evi-apps)
 
+install(TARGETS axiom_common
+        ARCHIVE DESTINATION /usr/lib)
