--- a/axiom-evi-apps/axiom-send/CMakeLists.txt
+++ b/axiom-evi-apps/axiom-send/CMakeLists.txt
@@ -2,3 +2,5 @@ add_executable(axiom-send axiom-send.c)
 add_dependencies(axiom-send axiom_user_library)
 target_link_libraries(axiom-send axiom_user_library)
 
+install(TARGETS axiom-send
+        RUNTIME DESTINATION /usr/bin)
