added extrae , nanox and mcxx

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,21 @@
 cmake_minimum_required (VERSION 2.8.11)
 project (Axiom)
 
-add_subdirectory (axiom-evi-allocator-lib)
-add_subdirectory (axiom-allocator)
-add_subdirectory (axiom-evi-apps)
-add_subdirectory (axiom-evi-allocator-drv)
-add_subdirectory (axiom-evi-nic)
+SET(CMAKE_INSTALL_PREFIX "")
+SET(sysroot "${CMAKE_CURRENT_LIST_DIR}/sysroot")
+SET(destdir "${CMAKE_CURRENT_LIST_DIR}/inst")
+
+add_subdirectory (axiom-evi-extrae)
+add_subdirectory (axiom-evi-nanox)
+add_subdirectory (axiom-evi-mcxx)
+#add_subdirectory (axiom-evi-allocator-lib)
+#add_subdirectory (axiom-allocator)
+#add_subdirectory (axiom-evi-apps)
+#add_subdirectory (axiom-evi-allocator-drv)
+#add_subdirectory (axiom-evi-nic)
 
 
 
+#add_custom_command(OUTPUT axiom.deb
+#		   COMMAND bash makePkg.sh)
+#add_custom_target(pkg ALL DEPENDS axiom.deb)
