--- a/axiom-evi-nanox/CMakeLists.txt
+++ b/axiom-evi-nanox/CMakeLists.txt
@@ -5,7 +5,7 @@ SET(installdir "${CMAKE_CURRENT_LIST_DIR}/pkg")
 
 add_custom_command(TARGET "Nanox"
                    COMMAND ./bootstrap && ./configure -with-axiomhome=../ --disable-debug  --disable-performance
-                                          --enable-instrumentation --with-extrae=/home/dude/tmp2/axiom/axiom-evi-extrae/pkg/usr/local --disable-instrumentation-debug)
+                                          --enable-instrumentation --with-extrae=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-extrae/pkg/usr/local --disable-instrumentation-debug)
 
 add_custom_command(TARGET "Nanox"
                    COMMAND make install DESTDIR=${installdir})
