re-added linking script

--- a/axiom-allocator/test/CMakeLists.txt
+++ b/axiom-allocator/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable (axiom-allocator-test axiom-allocator-test.c)
 
-#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -T ../../axiom-allocator/allocator.lds.x86")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -T ../../axiom-allocator/allocator.lds.x86")
 #set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -T ../../axiom-evi-allocator-lib/src/xs_mapx86.lds")
 
 add_dependencies(axiom-allocator-test axiom-allocator)
