added debug/performance gasnet and nanox

--- a/axiom-evi-gasnet/CMakeLists.txt
+++ b/axiom-evi-gasnet/CMakeLists.txt
@@ -1,8 +1,3 @@
-#make MANUAL_LIBCFLAGS=... Flags to add on the C compile for the GASNet libs
-#    make MANUAL_CFLAGS=...    Flags to add on the C compile for GASNet clients & tests
-#    make MANUAL_LDFLAGS=...   Linker flags to add for GASNet clients & tests
-#    make MANUAL_LIBS=...   
-
 add_custom_target(GASNET ALL
 		  DEPENDS axiom_run_api axiom_init_api axiom_common axiom_user_library
 			  axiom_switch axiom-allocator axiom_allocator_l1 axiom_allocator_l2)
@@ -10,19 +5,29 @@ add_custom_target(GASNET ALL
 SET(installdir "${CMAKE_CURRENT_LIST_DIR}/pkg")
 
 add_custom_command(TARGET GASNET
-                   COMMAND ./Bootstrap -y && ./configure --enable-udp --enable-debug --enable-trace --enable-backtrace --disable-parsync  --disable-smp --disable-pshm --disable-psm 
-							 --build='x86_64-unknown-linux-gnu' --includedir=/usr/include/)
+#                   COMMAND ./Bootstrap -y && ./configure --enable-cross-compile --enable-udp --enable-debug --enable-trace --enable-backtrace --disable-parsync  --disable-smp --disable-pshm 
+                   COMMAND ./Bootstrap -y && ./configure --enable-udp --enable-debug --enable-trace --enable-backtrace --disable-parsync  --disable-smp --disable-pshm
+							 --disable-stats --disable-debug-malloc --disable-system-debug-malloc  --with-target-cxxflags='-fPIC -DGASNETI_FORCE_PIC'
+#							 --build='x86_64-unknown-linux-gnu' --includedir=/usr/include/ CROSS_PAGESIZE='4096' CROSS_HAVE_MMAP='1')
+                                                         --build='x86_64-unknown-linux-gnu' --libdir=/usr/lib/gasnet-debug --includedir=/usr/include/gasnet-debug )
 
 add_custom_command(TARGET GASNET
-                   COMMAND make install MANUAL_LIBCFLAGS='-fPIC' MANUAL_CFLAGS='-fPIC' MANUAL_LDFLAGS='-fPIC' MANUAL_LIBS='-fPIC' SEPARATE_CC=1 DESTDIR=${installdir})
+                   COMMAND make install MANUAL_LIBCFLAGS='-fPIC -DGASNETI_FORCE_PIC' MANUAL_CXXFLAGS='-fPIC -DGASNETI_FORCE_PIC' MANUAL_CFLAGS='-fPIC -DGASNETI_FORCE_PIC' 
+			  MANUAL_LDFLAGS='-fPIC -DGASNETI_FORCE_PIC' MANUAL_LIBS='-fPIC -DGASNETI_FORCE_PIC' SEPARATE_CC=1 DESTDIR=${installdir})
+
+
+#============== no debug for nano performance ===============
+
+add_custom_command(TARGET GASNET
+                   COMMAND ./Bootstrap -y && ./configure --disable-udp --disable-smp --disable-debug --disable-parsync  --disable-pshm
+							 --disable-stats --disable-debug-malloc --disable-system-debug-malloc
+                                                         --build='x86_64-unknown-linux-gnu' --disable-backtrace-ladebug
+							 --libdir=/usr/lib/gasnet-performance --includedir=/usr/include/gasnet-performance)
+#--disable-aligned-segments --disable-seq --with-mpi-cc="mpicc -fPIC -DPIC" MANUAL_LIBCFLAGS='-fPIC -DPIC -DGASNETI_FORCE_PIC' MANUAL_CXXFLAGS='-DPIC -fPIC -DGASNETI_FORCE_PIC' MANUAL_CFLAGS='-DPIC -fPIC -DGASNETI_FORCE_PIC' 
+#                          MANUAL_LDFLAGS='-DPIC -fPIC -DGASNETI_FORCE_PIC' MANUAL_LIBS='-DPIC -fPIC -DGASNETI_FORCE_PIC')
+
+add_custom_command(TARGET GASNET
+                   COMMAND make install DESTDIR=${installdir})
 
 install(DIRECTORY ${installdir}/ DESTINATION /
 	USE_SOURCE_PERMISSIONS)
-
-
-# configure.in 
-#  axiom_libraries_CFLAGS="-I/home/abdallah/tmppp/axiom/axiom-evi-nic/include -I/home/abdallah/tmppp/axiom/axiom-evi-apps/include -I/home/abdallah/tmppp/axiom/axiom-allocator/include -I/home/abd$
-##  AC_SUBST([axiom_libraries_CFLAGS])
-#  evidence_lmm_CFLAGS="-I/home/abdallah/tmppp/axiom/axiom-evi-nic/include -I/home/abdallah/tmppp/axiom/axiom-evi-apps/include -I/home/abdallah/tmppp/axiom/axiom-allocator/include -I/home/abdall$
-#  AC_SUBST([evidence_lmm_CFLAGS])
-
