--- a/axiom-evi-nanox/CMakeLists.txt
+++ b/axiom-evi-nanox/CMakeLists.txt
@@ -10,7 +10,8 @@ add_custom_command(TARGET "Nanox"
                    COMMAND ./bootstrap && ./configure --disable-performance --with-gasnet=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/local/
 						      --with-gasnet-include=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/include/gasnet-debug
 			      			      --with-gasnet-lib=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/lib/gasnet-debug
-						      --disable-instrumentation --disable-instrumentation-debug CXXFLAGS='-fPIC' CFLAGS='-fPIC' --with-gasnet=/usr/local/gasnet-debug/)
+						      --disable-instrumentation --disable-instrumentation-debug CXXFLAGS='-fPIC' CFLAGS='-fPIC' --with-gasnet=/usr/local/gasnet-debug/
+							--prefix=/usr)
 
 add_custom_command(TARGET "Nanox"
                    COMMAND make install CXXFLAGS='-fPIC' CFLAGS='-fPIC' DESTDIR=${installdir} && make clean)
@@ -24,7 +25,8 @@ add_custom_command(TARGET "Nanox"
                                                       --with-gasnet-include=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/include/gasnet-performance/
                                                       --with-gasnet-lib=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/lib/gasnet-performance/
 #                                                      --with-gasnet-lib=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/gasnet/lib/
-                                                      --disable-instrumentation --disable-instrumentation-debug --disable-debug --with-gasnet=/usr/local/gasnet-performance/)
+                                                      --disable-instrumentation --disable-instrumentation-debug --disable-debug --with-gasnet=/usr/local/gasnet-performance/
+							--prefix=/usr)
 add_custom_command(TARGET "Nanox"
                    COMMAND make install DESTDIR=${installdir} && make clean)
 
@@ -37,7 +39,8 @@ add_custom_command(TARGET "Nanox"
                                                      #--with-gasnet=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/local/gasnet/
                                                       --with-gasnet-include=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/include/gasnet-instrumentation/
                                                       --with-gasnet-lib=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/lib/gasnet-instrumentation/
-						      --with-gasnet=/usr/local/gasnet-performance/)
+						      --with-gasnet=/usr/local/gasnet-performance/
+							--prefix=/usr)
 #                                                      --with-gasnet-lib=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/gasnet/lib/
 
 add_custom_command(TARGET "Nanox"
