--- a/axiom-allocator/src/CMakeLists.txt
+++ b/axiom-allocator/src/CMakeLists.txt
@@ -5,8 +5,8 @@ add_library (axiom-allocator axiom_allocator_l3/axiom_allocator_l3_sw.c  axiom_a
 #set(CMAKE_MODULE_LINKER_FLAGS  "-Wl,-T ../allocator.lds.x86")
 #set_target_properties(axiom-allocator PROPERTIES LINK_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/../allocator.lds.x86)
 
-add_dependencies(axiom-allocator axiom_user_library axiom_run_api)
-target_link_libraries(axiom-allocator axiom_user_library axiom_run_api)
+add_dependencies(axiom-allocator axiom_user_library axiom_run_api axiom-allocator-library)
+target_link_libraries(axiom-allocator axiom_user_library axiom_run_api axiom-allocator-library)
 target_include_directories (axiom-allocator PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories (axiom_allocator_l1 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories (axiom_allocator_l2 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
