--- a/axiom-evi-extrae/CMakeLists.txt
+++ b/axiom-evi-extrae/CMakeLists.txt
@@ -6,7 +6,7 @@ SET(installdir "${CMAKE_CURRENT_LIST_DIR}/pkg")
 
 add_custom_command(TARGET "Extrae"
                    COMMAND autoreconf -fiv && ./configure --without-binutils --disable-xmltest  --enable-nanos --without-mpi --without-unwind
-			   --without-dyninst --without-papi --enable-instrument-dynamic-memory --enable-instrument-io --with-sysroot=${sysroot})
+			   --without-dyninst --without-papi --enable-instrument-dynamic-memory --enable-instrument-io --with-sysroot=${sysroot} --prefix=/usr)
 
 add_custom_command(TARGET "Extrae"
                    COMMAND make install DESTDIR=${installdir})
