--- a/axiom-evi-nanox/CMakeLists.txt
+++ b/axiom-evi-nanox/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_custom_target(Nanox ALL
-		  DEPENDS Extrae GASNET)
+add_custom_target(Nanox ALL)
+#		  DEPENDS Extrae GASNET)
 
 SET(installdir "${CMAKE_CURRENT_LIST_DIR}/pkg")
 
@@ -11,7 +11,7 @@ add_custom_command(TARGET "Nanox"
 						      --with-gasnet-include=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/include/gasnet-debug
 			      			      --with-gasnet-lib=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/lib/gasnet-debug
 						      --disable-instrumentation --disable-instrumentation-debug CXXFLAGS='-fPIC' CFLAGS='-fPIC' --with-gasnet=/usr/local/gasnet-debug/
-							--prefix=/usr)
+							--prefix=/usr --with-extrae=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-extrae/pkg/usr/)
 
 add_custom_command(TARGET "Nanox"
                    COMMAND make install CXXFLAGS='-fPIC' CFLAGS='-fPIC' DESTDIR=${installdir} && make clean)
@@ -26,7 +26,7 @@ add_custom_command(TARGET "Nanox"
                                                       --with-gasnet-lib=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/lib/gasnet-performance/
 #                                                      --with-gasnet-lib=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/gasnet/lib/
                                                       --disable-instrumentation --disable-instrumentation-debug --disable-debug --with-gasnet=/usr/local/gasnet-performance/
-							--prefix=/usr)
+							--prefix=/usr --with-extrae=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-extrae/pkg/usr/)
 add_custom_command(TARGET "Nanox"
                    COMMAND make install DESTDIR=${installdir} && make clean)
 
@@ -40,7 +40,7 @@ add_custom_command(TARGET "Nanox"
                                                       --with-gasnet-include=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/include/gasnet-instrumentation/
                                                       --with-gasnet-lib=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/lib/gasnet-instrumentation/
 						      --with-gasnet=/usr/local/gasnet-performance/
-							--prefix=/usr)
+							--prefix=/usr --with-extrae=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-extrae/pkg/usr/)
 #                                                      --with-gasnet-lib=${CMAKE_CURRENT_LIST_DIR}/../axiom-evi-gasnet/pkg/usr/gasnet/lib/
 
 add_custom_command(TARGET "Nanox"
