--- a/axiom-evi-apps/axiom-netperf/CMakeLists.txt
+++ b/axiom-evi-apps/axiom-netperf/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(axiom-netperf axiom-netperf.c)
-add_dependencies(axiom-netperf axiom_user_library)
-target_link_libraries(axiom-netperf axiom_user_library)
+add_dependencies(axiom-netperf axiom_user_api)
+target_link_libraries(axiom-netperf axiom_user_api)
 
 install(TARGETS axiom-netperf
         RUNTIME DESTINATION /usr/bin)
