--- a/axiom-evi-apps/axiom-rdma/CMakeLists.txt
+++ b/axiom-evi-apps/axiom-rdma/CMakeLists.txt
@@ -4,8 +4,8 @@ add_executable(axiom-rdma axiom-rdma.c)
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -T ../../axiom-allocator/allocator.lds.x86")
 #set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -T ../../axiom-evi-allocator-lib/src/xs_mapx86.lds")
 
-add_dependencies(axiom-rdma axiom_user_library  axiom-allocator axiom_run_api)
-target_link_libraries(axiom-rdma axiom_user_library  axiom-allocator axiom_run_api)
+add_dependencies(axiom-rdma axiom_user_api  axiom-allocator axiom_run_api)
+target_link_libraries(axiom-rdma axiom_user_api  axiom-allocator axiom_run_api)
 
 install(TARGETS axiom-rdma
         RUNTIME DESTINATION /usr/bin)
