--- a/axiom-evi-apps/axiom-utility/CMakeLists.txt
+++ b/axiom-evi-apps/axiom-utility/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(axiom-utility axiom-utility.c)
-target_link_libraries(axiom-utility axiom_user_library)
+target_link_libraries(axiom-utility axiom_user_api)
 
 install(TARGETS axiom-utility
         RUNTIME DESTINATION /usr/bin)
