--- a/axiom-evi-apps/axiom-send/CMakeLists.txt
+++ b/axiom-evi-apps/axiom-send/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(axiom-send axiom-send.c)
-add_dependencies(axiom-send axiom_user_library)
-target_link_libraries(axiom-send axiom_user_library)
+add_dependencies(axiom-send axiom_user_api)
+target_link_libraries(axiom-send axiom_user_api)
 
 install(TARGETS axiom-send
         RUNTIME DESTINATION /usr/bin)
