--- a/axiom-evi-apps/axiom-traceroute/CMakeLists.txt
+++ b/axiom-evi-apps/axiom-traceroute/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(axiom-traceroute axiom-traceroute.c)
-add_dependencies(axiom-traceroute axiom_user_library)
-target_link_libraries(axiom-traceroute axiom_user_library)
+add_dependencies(axiom-traceroute axiom_user_api)
+target_link_libraries(axiom-traceroute axiom_user_api)
 
 install(TARGETS axiom-traceroute
         RUNTIME DESTINATION /usr/bin)
